Update harvest endpoints (#209)
