# modules/custom/dkan_harvest/src/Controller/Api.php
@@ -66,6 +66,30 @@ class Api implements ContainerInjectionInterface {
   }
 
   /**
+   * Get a single harvest plan.
+   *
+   * @param $plan_id
+   *   A harvest plan id.
+   *
+   * @return \Symfony\Component\HttpFoundation\JsonResponse
+   */
+  public function getPlan($plan_id) {
+    try {
+      $plan = $this->harvester
+        ->getHarvestPlan($plan_id);
+
+      return new JsonResponse(
+        json_decode($plan),
+        200,
+        ["Access-Control-Allow-Origin" => "*"]
+      );
+    }
+    catch (\Exception $e) {
+      return $this->exceptionJsonResponse($e);
+    }
+  }
+
+  /**
    * Register a new harvest.
    */
   public function register() {
@@ -115,13 +139,11 @@ class Api implements ContainerInjectionInterface {
 
   /**
    * Runs harvest.
-   *
-   * @param string $id
-   *   The harvest id.
    */
-  public function run($id) {
+  public function run() {
     try {
-
+      $payload = $this->requestStack->getCurrentRequest()->getContent();
+      $id = json_decode($payload)->plan_id;
       $result = $this->harvester
         ->runHarvest($id);
 
@@ -141,13 +163,18 @@ class Api implements ContainerInjectionInterface {
 
   /**
    * Gives list of previous runs for a harvest id.
-   *
-   * @param string $id
-   *   The harvest id.
    */
-  public function info($id) {
+  public function info() {
 
     try {
+      $id = $this->requestStack->getCurrentRequest()->get('plan');
+      if (empty($id)) {
+        return new JsonResponse(
+          ["message" => "Missing 'plan' query parameter value"],
+          400,
+          ["Access-Control-Allow-Origin" => "*"]
+        );
+      }
 
       $response = array_keys($this->harvester
         ->getAllHarvestRunInfo($id));
@@ -166,17 +193,15 @@ class Api implements ContainerInjectionInterface {
   /**
    * Gives information about a single previous harvest run.
    *
-   * @param string $id
-   *   The harvest id.
    * @param string $run_id
    *   The run's id.
    */
-  public function infoRun($id, $run_id) {
+  public function infoRun($run_id) {
 
     try {
 
       $response = $this->harvester
-        ->getHarvestRunInfo($id, $run_id);
+        ->getHarvestRunInfoTwo($run_id);
 
       return new JsonResponse(
             $response,
